@@ -22,6 +22,12 @@ python-debian (0.1.15) UNRELEASED; urgency=low
   * deb822: Use the apt_pkg.TagFile class instead of apt_pkg.ParseTagFile()
     (Closes: #552190)
   * test_deb822.py: Update to support new gpg "SIG_ID" algorithm
+  * deb822: Better support for non-ascii values.  Deb822 objects now
+    always contain unicode objects instead of strings.  Use the encoding
+    argument to Deb822's initializer and its iter_paragraphs class
+    method if the encoding of a file you are reading in is not utf-8.
+    (The dump method also takes an encoding argument, if you wish the
+    output not to be utf-8-encoded.) (Closes: #495272)
 
  -- Filippo Giunchedi <filippo@debian.org>  Sun, 09 Aug 2009 13:01:16 +0100
 
